@@ -6,14 +6,19 @@
  */
 
 // @lc code=start
+
+import java.util.LinkedList;
+import java.util.List;
+import java.util.Set;
+
 class Solution {
-    List<List<Integer>> res = new LinkedList<>();
-    List<Integer> path = new LinkedList<>();
+    private List<List<Integer>> res = new LinkedList<>();
+    private List<Integer> path = new LinkedList<>();
     int sum = 0;
     public List<List<Integer>> combinationSum2(int[] candidates, int target) {
         Arrays.sort(candidates);
         backtrack(candidates, target, 0);
-        return res;        
+        return res;
     }
 
     private void backtrack(int[] candidates, int target, int index) {
@@ -21,18 +26,24 @@ class Solution {
             return;
         }
         if (sum == target) {
-            res.add(new LinkedList(path));
+            res.add(new LinkedList<>(path));
             return;
         }
+
+        Set<Integer> seen = new HashSet<>();
+        // if (!path.isEmpty()) {
+        //     seen.add(path.getLast());
+        // }
         for (int i = index; i < candidates.length; i++) {
-            if (i > index && candidates[i] == candidates[i - 1]) {
+            if (seen.contains(candidates[i])) {
                 continue;
             }
+            seen.add(candidates[i]);
             sum += candidates[i];
             path.add(candidates[i]);
             backtrack(candidates, target, i + 1);
             sum -= candidates[i];
-            path.remove(path.size() - 1);
+            path.removeLast();
         }
     }
 }
